--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,125 @@
-img {
-  width: 15vw;
-  height: auto;
+html {
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  font-family: "Raleway", sans-serif;
+}
+
+body {
+  margin: 0;
+}
+
+header {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 15vw;
+  background-color: #0084f8;
+}
+
+.logo {
+  background-color: white;
+  width: 18vw;
+  height: 18vw;
+  flex-grow: 1;
+}
+
+header ul {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: flex-end;
+  list-style-type: none;
+}
+
+h4 {
+  color: #52616b;
+  text-align: center;
+  margin-top: 8vw;
+  margin-bottom: 8vw;
+  font-size: 36pt;
+}
+
+.nav_container {
+  width: 100%;
+  height: 15vw;
+  background-image: url("/images/planebanner.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: row;
+  flex-grow: 3;
+}
+
+a:link {
+  color: white;
+  background-color: transparent;
+  text-decoration: none;
+}
+
+a:visited {
+  color: white;
+  background-color: transparent;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #001b36;
+  background-color: transparent;
+  text-decoration: none;
+}
+
+a:active {
+  color: #52616b;
+  background-color: transparent;
+  text-decoration: underline;
+}
+
+.country_container {
+  width: 100%;
+  height: 25vw;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: #c9d6df;
+}
+
+.country_wrapper {
+  text-align: center;
+  position: relative;
+  width: 22vw;
+  height: 16vw;
+  font-size: 1.8vw;
+  font-weight: 600;
+  border-radius: 2em;
+}
+
+.country_wrapper:hover {
+  box-shadow: 2px 2px 10px #001b36;
+}
+
+.country_title {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  width: 20vw;
+  text-shadow: 2px 2px 10px #001b36;
+}
+
+.country_img {
+  width: 22vw;
+  height: 16vw;
+  border-radius: 2em;
+  box-shadow: 3px 3px 4px #47c2b1;
+  object-fit: cover;
+}
+
+footer {
+  text-align: center;
+  margin-top: 10vw;
 }
