--- a/styles/main.css
+++ b/styles/main.css
@@ -98,7 +98,7 @@ a:active {
 }
 
 .country_wrapper:hover {
-  box-shadow: 2px 2px 10px #001b36;
+  box-shadow: 4px 4px 15px #001b36;
 }
 
 .country_title {
@@ -109,11 +109,14 @@ a:active {
   color: white;
   width: 20vw;
   text-shadow: 2px 2px 10px #001b36;
+  cursor: pointer;
 }
 
 .country_img {
   width: 22vw;
   height: 16vw;
+  border-bottom: 1px solid #0084f8;
+  border-right: 1px solid #0084f8;
   border-radius: 2em;
   box-shadow: 3px 3px 4px #47c2b1;
   object-fit: cover;
