--- a/styles/scotland.css
+++ b/styles/scotland.css
@@ -1,4 +1,70 @@
-img {
-  width: 15vw;
-  height: auto;
+html {
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  font-family: "Raleway", sans-serif;
+}
+
+body {
+  margin: 0;
+}
+
+.logo_nav_wrapper {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 15vw;
+  background-color: #0084f8;
+}
+
+.logo {
+  background-color: white;
+  width: 18vw;
+  height: 18vw;
+  flex-grow: 1;
+}
+
+.logo_nav_wrapper ul {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: flex-end;
+  list-style-type: none;
+}
+
+.nav_container {
+  width: 100%;
+  height: 15vw;
+  background-image: url("/images/planebanner.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: row;
+  flex-grow: 3;
+}
+
+a:link {
+  color: white;
+  background-color: transparent;
+  text-decoration: none;
+}
+
+a:visited {
+  color: white;
+  background-color: transparent;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #001b36;
+  background-color: transparent;
+  text-decoration: none;
+}
+
+a:active {
+  color: #52616b;
+  background-color: transparent;
+  text-decoration: underline;
 }
