--- a/styles/scotland.css
+++ b/styles/scotland.css
@@ -139,6 +139,7 @@ h3 {
 }
 
 .city_container {
+  width: 100%;
   display: flex;
   flex-direction: column;
   background-color: rgba(71, 194, 177, 0.5);
@@ -170,6 +171,7 @@ h3 {
 }
 
 .landmark_container {
+  width: 100%;
   display: flex;
   flex-direction: column;
   background-color: rgba(255, 133, 118, 0.5);
@@ -200,6 +202,7 @@ h3 {
 }
 
 .celebrity_container {
+  width: 100%;
   display: flex;
   flex-direction: column;
   background-color: rgba(0, 132, 248, 0.5);
