--- a/styles/scotland.css
+++ b/styles/scotland.css
@@ -189,6 +189,7 @@ h3 {
   list-style-type: none;
   color: #001b36;
   padding-right: 1vw;
+  font-size: 14pt;
 }
 
 .landmark-image {
@@ -220,6 +221,7 @@ h3 {
   list-style-type: none;
   color: #001b36;
   padding-right: 1vw;
+  font-size: 14pt;
 }
 
 .celebrity-image {
