--- a/styles/fiji.css
+++ b/styles/fiji.css
@@ -1,4 +1,209 @@
-img {
-    width: 15vw;
-    height: auto;
-  }
+html {
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  font-family: "Raleway", sans-serif;
+}
+
+body{ 
+  margin: 0;
+}
+
+.logo_nav_wrapper{
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 15vw;
+  background-image: url("/images/fijiBannerImage.jpg");
+  background-repeat: no-repeat;
+}
+
+.logo{
+  background-color: white;
+  width: 18vw;
+  height: 18vw;
+  flex-grow: 1;
+}
+
+.logo_nav_wrapper ul {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: flex-end;
+  list-style-type: none;
+}
+
+.nav_container{
+  width: 100%;
+  height: 15vw;
+  background-image: url("/images/planebanner.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: row;
+  flex-grow: 3;
+}
+
+a:link{
+  color: white;
+  text-shadow: 2px 2px 7px #001b36;
+  background-color: transparent;
+  text-decoration: none;
+}
+
+a:visited {
+  color: white;
+  text-shadow: 2px 2px 7px #001b36;
+  background-color: transparent;
+  text-decoration: none;
+}
+
+a:hover{
+  color: #001b36;
+  text-shadow: 2px 2px 7px #001b36;
+  background-color: transparent;
+  text-decoration: none;
+}
+
+a:active {
+  color: #52616b;
+  text-shadow: 2px 2px 7px #001b36;
+  background-color: transparent;
+  text-decoration: none;
+}
+
+.boldLink{
+  width: 50px;
+  height: 20px;
+  background: rgb(54, 23, 228);
+  border: solid white 2px;
+  border-radius: 10px;
+  color: white;
+  text-align: center;
+}
+
+.fijiTitle{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.fijiTitle img{
+  padding-top: 5px;
+}
+.fijiWelcome{
+  display: flex;
+  justify-content: center;
+}
+.fijiHiddenDepth{
+  display: flex;
+  justify-content: center;
+}
+
+/* .fijiFlagWrapper{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+} */
+/* .fijiFlagWrapper img{
+  width: 10vw;
+  padding: 0;
+  margin: 0;
+} */
+
+
+.fijiElements{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+}
+
+.cityContainer{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  background-color: rgba(71, 194, 177, .5);
+}
+.city-card{
+  height: 40vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  contain: content;
+}
+.city-card ul{
+  list-style-type: none;
+  color: #001b36;
+  padding-right: 1vw;
+}
+.city-image{
+  width: 22vw;
+  height: 16vw;
+  border-bottom: 1px solid #0084f8;
+  border-right: 1px solid #0084f8;
+  border-radius: 2em;
+  box-shadow: 3px 3px 4px #47c2b1;
+  object-fit: cover;
+}
+
+
+.landmarkContainer{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  background-color: rgba(255, 133, 118, .5);
+}
+.landmark-card{
+  height: 40vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  contain: content;
+}
+.landmark-card ul{
+  list-style-type: none;
+  color: #001b36;
+  padding-right: 1vw;
+}
+.landmark-image{
+  width: 22vw;
+  height: 16vw;
+  border-bottom: 1px solid #0084f8;
+  border-right: 1px solid #0084f8;
+  border-radius: 2em;
+  box-shadow: 3px 3px 4px #47c2b1;
+  object-fit: cover;
+}
+
+
+.celebrityContainer{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  background-color: rgba(0, 132, 248, .5);
+}
+.celebrity-card{
+  height: 40vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  contain: content;
+}
+.celebrity-card ul{
+  list-style-type: none;
+  color: #001b36;
+  padding-right: 1vw;
+}
+.celebrity-image{
+  width: 22vw;
+  height: 16vw;
+  border-bottom: 1px solid #0084f8;
+  border-right: 1px solid #0084f8;
+  border-radius: 2em;
+  box-shadow: 3px 3px 4px #47c2b1;
+  object-fit: cover;
+}
